--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,10 @@
 body, html{
     width: 100%;
-    min-height: 100%;
+    height: 100%;
     margin: 0;
     padding: 0;
+    font-size: 16px;
+    font-family: "Open Sans", arial;
 }
 
 a:focus, a:hover {
@@ -13,9 +15,30 @@ a {
     text-decoration: none;
 }
 
-
 /* ----------- header ----------------- */
-header {
+.header {
+    font-family: "Quicksand", sans-serif;
+    font-size: 9em;
+    color: #ffffff;
+}
+
+.header-sub {
+    font-family: "Quicksand", sans-serif;
+    font-size: 0.5em;
+    color: #ffffff;
+    position: relative;
+    top: -21px;
+}
+
+/* ----------- Layout ----------------- */
+#start {
+    background: url(../media/bg.jpg) no-repeat center center fixed ;
+    background-size: cover;
+    height: auto !important;
+    min-height: 100%;
+    overflow-x: hidden;
+    position: relative;
+    text-align: right;
 
     /*Align header center center */
     display: -webkit-flex;
@@ -26,13 +49,173 @@ header {
     justify-content: center;
 }
 
-/* ----------- Layout ----------------- */
+section {
+    width: 100%;
+}
 
+.flexbox-container {
+    display: flex;
+    display: -webkit-flex;
+    flex-flow: row wrap;
+    justify-content: center;
+}
 
+.items {
+    flex: 1;
+    width: 30%;
+    max-width: 450px;
+    flex-basis: auto;
+    padding: 4%;
+    font-size: 1rem;
+}
 
+.left-item{
+    /*padding-right: 2rem;*/
+}
 
+.right-item{
+   /* padding-left: 2rem;*/
+}
+
+.offers {
+    background-color: antiquewhite;
+    border: 3px solid #ffffff;
+    box-sizing: border-box;
+    float: left;
+    height: 6rem;
+    font-size: 4em;
+    font-family: "Quicksand", sans-serif;
+
+    /*Align center center */
+    display: -webkit-flex;
+    display:         flex;
+    -webkit-align-items: center;
+    align-items: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+
+    /*make div square ratio */
+    width: 24.5vw;
+    height:24.5vw;
+}
+
+.item-img {
+    width: 100%;
+    max-width: 450px;
+}
+
+#portfolio{
+    background-color: #fff;
+    text-align: center;
+}
+
+.references-header {
+    font-size: 3.5em;
+    font-family: "Quicksand", sans-serif;
+}
+
+.reference-desc {
+    padding: 2rem 0.5rem;
+}
+
+.fader {
+    height: 70px;
+    position: relative;
+    top: -70px;
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,ffffff+100&amp;0.01+0,1+100 */
+    background: -moz-linear-gradient(top,  rgba(255,255,255,0.01) 0%, rgba(255,255,255,1) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0.01)), color-stop(100%,rgba(255,255,255,1))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top,  rgba(255,255,255,0.01) 0%,rgba(255,255,255,1) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top,  rgba(255,255,255,0.01) 0%,rgba(255,255,255,1) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top,  rgba(255,255,255,0.01) 0%,rgba(255,255,255,1) 100%); /* IE10+ */
+    background: linear-gradient(to bottom,  rgba(255,255,255,0.01) 0%,rgba(255,255,255,1) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#03ffffff', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
+}
 /* ----------- Footer and social ----------------- */
 
+/* ----------- Items ----------------- */
 
+.items-header {
+    margin: 0;
+    font-family: Quicksand, sans-serif;
+    font-size: 3em;
+}
+
+.items-preamble {
+    color: #2BA368;
+    font-size: 2em;
+    margin: 1.1rem;
+}
+
+/* ----------- About -------------------------- */
+section#about {
+    margin: 1rem auto;
+    width: 76%;
+    max-width: 1000px;
+    font-family: Quicksand, sans-serif;
+}
+
+.about-header {
+    font-size: 4em;
+    margin-bottom: 0;
+
+}
+
+.about-preamble {
+    font-size: 2em;
+    margin-bottom: 1.5em;
+    color: #2BA368;
+}
+
+.about-text {
+    font-size: 1.2em;
+    -webkit-column-count: 2; /* Chrome, Safari, Opera */
+    -moz-column-count: 2; /* Firefox */
+    column-count: 2;
+    -webkit-column-gap: 4rem; /* Chrome, Safari, Opera */
+    -moz-column-gap: 4rem; /* Firefox */
+    column-gap: 4rem;
+}
+
+
+
+/* ----------- Offers ----------------- */
+.squares{
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
+.square{
+    float:left;
+    position: relative;
+    width: 24.5%;
+    padding-bottom: 24.5%; /* = width for a 1:1 aspect ratio */
+    margin:0.25%;
+    overflow:hidden;
+    background-color: antiquewhite;
+}
+
+.inner-content {
+    position:absolute;
+    height:80%; /* = 100% - 2*10% padding */
+    width:90%; /* = 100% - 2*5% padding */
+    padding: 10% 5%;
+    text-align:center;
+}
+
+.table{
+    display:table;
+    height:100%;
+    width:100%;
+}
+.table-cell{
+    display:table-cell;
+    vertical-align:middle;
+    height:100%;
+    width:100%;
+
+    font-size: 3.5em;
+    font-family: "Quicksand", sans-serif;
+}
 
 /* ----------- Media Queries ----------------- */
