--- a/css/style.css
+++ b/css/style.css
@@ -219,3 +219,100 @@ section#about {
 }
 
 /* ----------- Media Queries ----------------- */
+
+.cd-main-content {
+    /* set a min-height and a z-index to be sure that the main element completely covers the lateral menu */
+    min-height: 100%;
+    z-index: 2;
+    transition-property: transform;
+    transition-duration: 0.4s;
+}
+.cd-main-content.lateral-menu-is-open {
+    transform: translateX(-260px);
+}
+
+/*--------------Nav ---------------------------*/
+.site-nav {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    display: none;
+    z-index: 99;
+    background-color: #fff4d5;
+    background-color: rgba(255, 244, 213, 0.90);
+    box-sizing: border-box;
+    padding: 65px 80px 80px 0;
+}
+.site-nav ul {
+    margin-left: 70px;
+    margin-top: -40px;
+    z-index: 9999;
+}
+.site-nav li {
+    margin-bottom: 20px;
+    list-style-type: none;
+}
+.site-nav a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 3em;
+    font-family: "Quicksand", sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 6px;
+}
+
+.fixed-header {
+    position: absolute;
+    width: 100%;
+}
+
+.fixed-header {
+    padding: 35px 0 0 0;
+    position: absolute;
+    width: 100%;
+}
+
+.container {
+    margin: auto;
+    padding: 0 46px;
+}
+
+#toggle {
+    width: 28px;
+    height: 30px;
+    cursor: pointer;
+    z-index: 1000;
+    position: relative;
+}
+
+.noselect {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+#toggle div {
+    width: 100%;
+    height: 2px;
+    background: #fff;
+    margin: 8px auto;
+    backface-visibility: hidden;
+}
+#toggle.on .one {
+    -webkit-transform: rotate(45deg) translate(5px, 6px);
+    -ms-transform: rotate(45deg) translate(5px, 6px);
+    transform: rotate(45deg) translate(5px, 6px);
+    background: #fff;
+}
+
+#toggle.on .two {
+    opacity: 0;
+}
+#toggle.on .three {
+    -webkit-transform: rotate(-45deg) translate(7px, -10px);
+    -ms-transform: rotate(-45deg) translate(7px, -10px);
+    transform: rotate(-45deg) translate(7px, -10px);
+    background: #fff;
+}
