--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,9 @@ body, html{
     font-family: "Open Sans", arial;
 }
 
-
+body { -webkit-animation:fadein 1.5s; animation:fadein 1.5s }
+@-webkit-keyframes fadein { from {opacity:0.5} to {opacity:1} }
+@keyframes fadein { from {opacity:0.5} to {opacity:1} }
 
 a {
     text-decoration: none;
@@ -28,7 +30,7 @@ a:active {
 /* ----------- header ----------------- */
 .header {
     font-family: "Quicksand", sans-serif;
-    font-size: 9em;
+    font-size: 8em;
     color: #ffffff;
 }
 
@@ -44,6 +46,9 @@ a:active {
 #start {
     background: url(../media/bg.jpg) no-repeat center center fixed ;
     background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     height: auto !important;
     min-height: 100%;
     overflow-x: hidden;
@@ -73,7 +78,6 @@ section {
 .items {
     flex: 1;
     width: 30%;
-    max-width: 450px;
     flex-basis: auto;
     font-size: 1rem;
 }
@@ -85,6 +89,42 @@ section {
 .right-item{
     padding-left: 50px;
 }
+
+/*--------Animate underline on links -----------*/
+.items-header, .site-nav a {
+    position: relative;
+    text-decoration: none;
+}
+
+.items-header:before,
+.site-nav a:before
+{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #ededed;
+    visibility: hidden;
+    -webkit-transform: scaleX(0);
+    transform: scaleX(0);
+    -webkit-transition: all 0.3s ease-in-out 0s;
+    transition: all 0.3s ease-in-out 0s;
+}
+
+.items-header:hover:before,
+.site-nav a:hover:before
+{
+    visibility: visible;
+    -webkit-transform: scaleX(1);
+    transform: scaleX(1);
+}
+
+.site-nav a:before {
+    background-color: rgba(243, 242, 238, 0.55);
+}
+/*-----------------------------------------------*/
 
 .offers {
     background-color: #F2F3EE;
@@ -158,6 +198,22 @@ section {
     background: linear-gradient(to bottom,  rgba(255,255,255,0.01) 0%,rgba(255,255,255,1) 100%); /* W3C */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#03ffffff', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
 }
+
+.welcome-arrow {
+    position: absolute;
+    bottom: 10px;
+    cursor: pointer;
+}
+.welcome-arrow:hover {
+    transform: scale(1.05);
+    -webkit-transform: scale(1.05);
+}
+
+.arrow-container {
+    text-align: center;
+    color: #ffffff;
+    opacity: 0.5;
+}
 /* ----------- Footer and social ----------------- */
 
 /* ----------- Items ----------------- */
@@ -167,9 +223,13 @@ section {
     text-transform: uppercase;
     font-size: 2.4em;
     font-family: "Quicksand", sans-serif;
-    text-transform: uppercase;
     font-weight: 500;
     letter-spacing: 6px;
+    
+}
+
+.reference-desc a {
+    color: #000;
 }
 
 .items-preamble {
@@ -262,18 +322,24 @@ section#about {
 }
 
 .come-in {
-    transform: scale(0.2,0.2);
+    transform: scale(0.5,0.5);
+    opacity: 0;
     -webkit-animation: come-in 1.2s ease forwards;
     -moz-animation: come-in 1.2s ease forwards;
     animation: come-in 1.2s ease forwards;
 }
-
-@keyframes come-in {
-    to {transform: scale(1,1);}
+@-webkit-keyframes come-in {
+    to {
+        transform: scale(1,1);
+        opacity: 1;
+    }
 }
 
-@-webkit-keyframes come-in {
-    to {transform: scale(1,1);}
+@keyframes come-in {
+    to {
+        transform: scale(1,1);
+        opacity: 1;
+    }
 }
 
 .squares-header{
@@ -286,21 +352,23 @@ section#about {
     /*text-transform: uppercase;*/
 }
 
-/* Hide original text */
-.table-cell:hover { font-size: 0;
-}
 
-/* Replace original text with value in data-hover */
-.table-cell:hover:before {
-    font-size: 18px;
-    content: attr(data-hover);
+@media screen and (min-width: 801px) {
+
+    /* Hide original text */
+    .table-cell:hover { font-size: 0;
+    }
+
+    /* Replace original text with value in data-hover */
+    .table-cell:hover:before {
+        font-size: 18px;
+        content: attr(data-hover);
+    }
 }
 
 .square .fa {
     color: rgb(223, 223, 223);
 }
-
-/* ----------- Media Queries ----------------- */
 
 .cd-main-content {
     /* set a min-height and a z-index to be sure that the main element completely covers the lateral menu */
@@ -326,7 +394,7 @@ section#about {
     padding: 65px 80px 80px 0;
 }
 .site-nav ul {
-    margin-left: 70px;
+    margin-left: 20px;
     margin-top: -40px;
     z-index: 9999;
 }
@@ -401,5 +469,156 @@ section#about {
 
 #toggle.on {
     position: fixed;
+}
+
+/*--------------Partners  ---------------------------*/
+.partners-list {
+    color: #ffffff;
+    font-family: Quicksand, sans-serif;
+    font-size: 2em;
+    text-align: left;
+    margin-top: 0;
+}
+
+#start.partner-start {
+    flex-direction: column;
+    justify-content: flex-start;
+
+}
+
+.partners-header {
+    margin: 0
+}
+
+/*--------------Media queries ---------------------------*/
+@media screen and (max-width: 1100px ) {
+
+    .header-sub {
+        display: block;
+    }
+
+    .wrapping-container {
+        padding: 0 20px;
+    }
+
+    .about-preamble {
+       font-size: 1.2em;
+    }
+
+    .square {
+        width: 49%;
+        padding-bottom: 49%;
+        margin-bottom: 0;
+    }
+
+    .squares {
+        width: 60%;
+    }
+    .table-cell {
+        font-size: 1.6em;
+    }
+
+}
+
+@media screen and (max-width: 800px ) {
+    .header {
+        font-size: 4em;
+    }
+
+    .table-cell {
+        font-size: 1.0em;
+    }
+
+    .about-text {
+    -webkit-column-count: 1;
+    -moz-column-count: 1;
+    column-count: 1;
+    }
+
+    .about-header,
+    .references-header,
+    .squares-header {
+        font-size: 2.5em;
+    }
+
+    .items {
+        width: 100%;
+    }
+
+    .left-item {
+         padding-right: 0;
+    }
+
+    .right-item {
+         padding-left: 0;
+    }
+
+    .items-header {
+        font-size: 1.7em;
+    }
+    .items-preamble {
+        font-size: 1.6em;
+    }
+
+    .squares {
+        width: 80%;
+    }
+
+
+    .square-small:before {
+        content: "SMALL: Ett prisvärt och lite enklare paket som likväl håller en utmärkt standard. Här hittar ni de primära funktionerna för er hemsida.";
+    }
+
+    .square-medium:before {
+        content: "MEDIUM: Ett litet mer tillspetsat paket där ni har ännu större möjligheter. Här finns det mesta av det ni önskar i funktionsväg.";
+    }
+    .square-large:before {
+        content: "LARGE: Ett val för er som kräver det bästa. Mängder av funktioner och fördelar som uppfyller de tuffa kraven hos en högdynamisk hemsida.";
+    }
+
+    .square-xl:before {
+        content: "XL: Har ni önskemål som sträcker sig utöver våra ordinarie paket? Kanske en häpnadsväckande idé eller särskilda önskemål?";
+    }
+
+    /*hide service type and Font awesome since showing only the text on smaller screens */
+    .service-type {
+        display: none;
+    }
+
+    .squares .fa {
+        display: none;
+    }
+
+    /*since flexbox doesnt work satisfying on mobile device, fix it with this */
+    .flexbox-container {
+        display: block;
+    }
+
+}
+@media screen and (max-width: 500px) {
+    .squares {
+    width: 100%;
+}
+    .site-nav ul {
+        margin-left: 6px;
+    }
+    .site-nav ul {
+        margin-top: -28px;
+        font-size: 0.5em;
+    }
+
+    .site-nav a {
+        font-weight: bold;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .square {
+    width: 100%;
+    padding-bottom: 100%;
+    }
+    .square {
+        margin-bottom: 20px;
+    }
 }
 
